--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jdk: [8,9,10,11,12]
+        jdk: [8, 11,12]
         
     env:
       DATABASE_USERNAME: 'root'
